<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.currencycoverterapp.presentation.ui.get_currencies.GetCurrenciesViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.currencycoverterapp.presentation.get_currencies.GetCurrenciesFragment">

            <Spinner
                android:id="@+id/spFromCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/spinner_padding"
                app:layout_constraintBottom_toTopOf="@id/tv_Amount"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrows"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_arrows"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_compare_arrows_36"
                app:layout_constraintBottom_toTopOf="@id/tv_Amount"
                app:layout_constraintEnd_toStartOf="@id/spToCurrency"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toEndOf="@id/spFromCurrency"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spToCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/spinner_padding"
                app:layout_constraintBottom_toTopOf="@id/tv_Amount"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/iv_arrows"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btnCalculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spFromCurrency" />

            <TextView
                android:id="@+id/tv_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/imperialRed"
                android:textSize="@dimen/tvAmount_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/etAmount"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/spFromCurrency" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="@dimen/etAmount_height"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/spFromCurrency"
                tools:layout_editor_absoluteX="38dp" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/imperialRed"
                android:text="@string/calculate"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/etAmount" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".90" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.70" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>